--- a/styleTwo.css
+++ b/styleTwo.css
@@ -119,3 +119,66 @@
     width: 100%;
     height: 100%;
 }
+
+@media screen and (max-width: 768px) {
+    #container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #hinge {
+        width: 15px;
+        height: 350px;
+    }
+
+    #pokedexTwo {
+        width: 280px;
+        height: 360px;
+    }
+
+    #searchBar {
+        flex-direction: column;
+        height: auto;
+        margin: 10px 0;
+    }
+    
+    #searchName {
+        width: 100%;
+        font-size: 1.2rem;
+    }
+    
+    #sectionTwo {
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 3px;
+    }
+    
+    #hinge {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    #pokedexTwo {
+        width: 280px;
+        height: 400px;
+    }
+
+    #searchBar {
+        width: 90%;
+        margin: 5px 0;
+    }
+
+    #sectionTwo {
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 2px;
+    }
+
+    #sectionFour .bottomTwo {
+        width: 100px;
+        height: 30px;
+    }
+
+    #hinge {
+        display: none;
+    }
+}
